@@ -6,4 +6,9 @@ copyright_holder  = David Golden
 
 [@DAGOLDEN]
 :version = 0.060
+RunExtraTests.default_jobs = 9
 stopwords = xt
+stopwords = prerelease
+
+[CheckExtraTests]
+default_jobs = 9
